# object-detection

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp  obj_detection.py  yolox.py
